<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivSongCover"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/tvSongTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_cancion"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivSongCover"
        app:layout_constraintTop_toTopOf="@id/ivSongCover"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artista"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvSongTitle"
        app:layout_constraintTop_toBottomOf="@id/tvSongTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivRemoveFavorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        android:contentDescription="@string/remove_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
