<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/esbrinaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:icon="@drawable/ic_play_arrow"
            app:iconPadding="8dp"


            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:hint="@string/enter_song_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGuess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:textColor="@android:color/black"

                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="16dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tvGuessed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvRemaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvAttempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:gravity="center" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_game"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:visibility="gone"/>


    </LinearLayout>
</ScrollView>
